fixed text and whitespace

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -81,7 +81,7 @@ h1{
 .text{
     padding: 0px;
     margin: 0 auto 0 auto;
-    width: 80%;
+    width: 70%;
 } 
 
 .mid-header{
